@@ -2,7 +2,7 @@
 	ADDED - RRD datasource can take SET rrd_default_path to make configs a little easier to read.
 	ADDED - RRD datasource can take SET rrd_default_in_ds and rrd_default_out_ds for non-Cacti users.
 	ADDED - RRD datasource can get Cacti query information (in poller_output mode ONLY) - like ifAlias, ifSpeed etc
-	ADDED - RRD datasource can take the ifSpeed from the above, and use it in the map.
+	ADDED - RRD datasource can take the ifSpeed/ifHighSpeed from the above, and use it in the map.
 	ADDED - RRD datasource fills in Cacti cacti_path_rra and cacti_url with Cacti base path and URL
 	ADDED - RRD datasource can take global SET rrd_options to add extra options to rrdtool command lines
 	ADDED - SNMP datasource also stores the raw data from the SNMP agent in snmp_raw_in/snmp_raw_out
@@ -33,6 +33,7 @@
         ADDED - SCALE allows 'none' as a colour (for non-gradients). Only affects LINKs so far.
         ADDED - fping plugin allows for changing the number of pings.
         ADDED - TARGET strings can be enclosed in quotes, to allow spaces in them (mainly for external ! scripts)
+        ADDED - "KEYSTYLE tags" - like classic, but uses the scale tags instead of percentages.
 	CHANGE - Cacti plugin uses "processed" map title now (allows {} tokens in the title)
 	CHANGE - A NODE with no POSITION is not drawn, instead of drawn at 0,0. Useful for templates.
 	CHANGE - A LINK with no NODES is no longer an error. Also for templates.
